# gxde-sni-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-deb  config-workspace.h.cmake
debian/: changelog  control  copyright  rules
libkworkspace/: CMakeLists.txt
po/nb/: ksecretprompter.po
src/: main.cpp
src/statusnotifierwatcher/: statusnotifierwatcher.cpp  statusnotifierwatcher.h
statusnotifierwatcher/: CMakeLists.txt
xembed-sni-proxy/: CMakeLists.txt
